log
Fri Mar 27 05:41:25 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
331efde
Sat Mar 28 06:42:27 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:21: error: expected expression before ‘List’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                     ^~~~
list.c:38:26: error: expected ‘,’ or ‘;’ before ‘malloc’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                          ^~~~~~
aca766b
Sat Mar 28 06:42:54 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:21: error: expected expression before ‘List’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                     ^~~~
list.c:38:26: error: expected ‘,’ or ‘;’ before ‘malloc’
   38 |     List* nuevo = (*List)malloc(sizeof(List));
      |                          ^~~~~~
2e6273e
Sat Mar 28 06:43:48 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
e7ca2e7
Sat Mar 28 06:53:23 PM UTC 2026: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/60
ef99b5b
Sat Mar 28 07:03:31 PM UTC 2026: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:19: error: expected ‘;’ before ‘}’ token
   55 |     return primero
      |                   ^
      |                   ;
   56 | }
      | ~                  
59af54e
Sat Mar 28 07:03:43 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa6441a
Sat Mar 28 07:15:10 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|5
total_score: 15/60
b7edb03
Sat Mar 28 07:22:15 PM UTC 2026: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/60
0e1777d
Sat Mar 28 07:23:01 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
9bfa3a1
Sat Mar 28 07:24:29 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
1c4a13a
Sat Mar 28 07:28:16 PM UTC 2026: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 20/60
a853cc0
Sat Mar 28 07:30:38 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|4
total_score: 20/60
ee7fb23
Sat Mar 28 07:36:49 PM UTC 2026: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:94:9: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   94 |     if (last->current == NULL){
      |         ^~~~
      |         list
list.c:94:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:101:5: error: expected ‘;’ before ‘}’ token
  101 |     }
      |     ^
f298338
Sat Mar 28 07:37:07 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:94:9: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   94 |     if (last->current == NULL){
      |         ^~~~
      |         list
list.c:94:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:101:5: error: expected ‘;’ before ‘}’ token
  101 |     }
      |     ^
a7a85f4
Sat Mar 28 07:37:38 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:94:9: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   94 |     if (last->current == NULL){
      |         ^~~~
      |         list
list.c:94:9: note: each undeclared identifier is reported only once for each function it appears in
47cd647
Sat Mar 28 07:37:55 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:94:9: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   94 |     if (last->current == NULL){
      |         ^~~~
      |         list
list.c:94:9: note: each undeclared identifier is reported only once for each function it appears in
5d04a8c
Sat Mar 28 07:38:08 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:98:5: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   98 |     last->current = last->tail->prev;
      |     ^~~~
      |     list
list.c:98:5: note: each undeclared identifier is reported only once for each function it appears in
2d38e6c
Sat Mar 28 07:38:30 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:98:5: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   98 |     last->current = last->tail->prev;
      |     ^~~~
      |     list
list.c:98:5: note: each undeclared identifier is reported only once for each function it appears in
9d9625a
Sat Mar 28 07:38:53 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
7ffe8c8
Sat Mar 28 07:43:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
f242009
Sat Mar 28 07:45:11 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 30/60
8b92cb0
Sat Mar 28 11:19:31 PM UTC 2026: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:119:9: error: ‘nuevo’ undeclared (first use in this function)
  119 |         nuevo->next = list->head;   //apunto el siguiente del nuevo hacia la cabeza
      |         ^~~~~
list.c:119:9: note: each undeclared identifier is reported only once for each function it appears in
6f75c80
Sat Mar 28 11:19:51 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
0762206
Sun Mar 29 03:36:39 PM UTC 2026: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 40/60
0b51f50
Sun Mar 29 03:56:45 PM UTC 2026: 
 list.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  10|2
total_score: 40/60
860352a
Sun Mar 29 04:00:31 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 50/60
5b6b8f4
